src/test/deca/context/invalid/provided/invalid_modulo_with_constant_float.deca
// Description:
//    Modulo avec une constante float.
//
// Resultats:
//    invalid_modulo_with_constant_float.deca:13:8: Type mismatch:both operands must be of type int
//
// Historique:
//    cree le 12/01/2025
{
int a = 10;

// Doit etre refuse.
int c = a % 1.5;
}
